feat: get gastos by id
